client/app/app.css
/**
 * Bootstrap Fonts
 */

@font-face {
    font-family: 'Glyphicons Halflings';
    src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot');
    src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
    url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'),
    url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'),
    url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

/**
 *Font Awesome Fonts
 */

@font-face {
    font-family: 'FontAwesome';
    src:    url('../bower_components/font-awesome/fonts/fontawesome-webfont.eot?v=4.2.0');
    src:    url('../bower_components/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'),
            url('../bower_components/font-awesome/fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'),
            url('../bower_components/font-awesome/fonts/fontawesome-webfont.ttf?v=4.2.0') format('truetype'),
            url('../bower_components/font-awesome/fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

:lang(ja) { font-family:    "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ", arial, helvetica, sans-serif, fontAwesome; }
:lang(ko) { font-family:    "Malgun Gothic",  "Apple SD Gothic Neo", sans-serif, serif, fontAwesome; }
:lang(en) { font-family:    "Helvetica Neue", Helvetica, Arial, sans-serif, serif, fontAwesome; }

/**
 * App-wide Styles
 */

 html {
     font-size:100%;
     -webkit-text-size-adjust:100%;
     -ms-text-size-adjust:100%;
 }

 body {
     height: 100%;
     width: 100%;
     -webkit-font-smoothing: antialiased;
     font-size: 14px;
     line-height: 1rem;
     background: white;
     color: #333;
     padding: 0;
     overflow-y: hidden;
     overflow-x: hidden;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }

 .body {
     height: 100%;
 }

 ul, ol {
     padding: 0;
 }

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

a:focus {
    outline: none;
}

/* I don't know about user-select options for now. Do we really need this now? */
.email,
p {
    -webkit-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    user-select: text;
}

